tests/ui/parser/misspelled-keywords/let-mut.stderr
error: expected one of `:`, `;`, `=`, `@`, or `|`, found `a`
  --> $DIR/let-mut.rs:2:14
   |
LL |     let muta a = 10;
   |              ^ expected one of `:`, `;`, `=`, `@`, or `|`

error: aborting due to 1 previous error

