tests/ui/parser/misspelled-keywords/let-mut.rs
fn main() {
    let muta a = 10;
    //~^ ERROR expected one of
}
